# no-synthwave

./: .gitignore  CMakeLists.txt  README.md  chipscene.frag  gfx.frag  gfx.h  load210.frag  nswv.c  sfx.frag  sfx.glsl  sfx.h  skyscrapers.frag  smaller.bat  sound.frag  sound2.frag
minification/: Compressor.py  GLSLLexer130.py
